--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,6 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-image: linear-gradient(160deg, rgba(242, 191, 209, 0.7098039216) 0, rgba(228, 175, 198, 0.7098039216) 25%, rgba(212, 155, 185, 0.7098039216) 50%, rgba(195, 136, 173, 0.7098039216) 75%, rgba(179, 121, 165, 0.7098039216) 100%);
 }
