--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@500&display=swap');
+
+/* ---------------- CSS RESET ---------------- */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  font-family: "Alkatra", cursive;
+  color: white;
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  border: none;
+  background-color: transparent;
 }
+
+button:hover {
+  cursor: pointer;
+}
+
+/* ----------------------------------------------*/
+
