--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   background-image: linear-gradient(160deg, rgba(242, 191, 209, 0.7098039216) 0, rgba(228, 175, 198, 0.7098039216) 25%, rgba(212, 155, 185, 0.7098039216) 50%, rgba(195, 136, 173, 0.7098039216) 75%, rgba(179, 121, 165, 0.7098039216) 100%);
+  padding: 1% 2%;
 }
